fix header text overflow

--- a/src/styles/components/_review.sass
+++ b/src/styles/components/_review.sass
@@ -55,8 +55,10 @@
 
 				.review-dialog-header-text
 					overflow: hidden
-					padding: 16px
+					padding: 15px
 					margin: 0
+
+					max-width: 655px
 
 					font-size:      130%
 					letter-spacing: 1px
